--- a/location/country/ukraine/index.html
+++ b/location/country/ukraine/index.html
@@ -2,17 +2,33 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiographyproject.com/location/country/ukraine/index.html" rel="canonical">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen">
+	<link href="https://encyclopedia.historiographyproject.com/location/country/ukraine/index.html" rel="canonical">
 <!-- end bbinclude -->
 	<title>Ukraine | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
-<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9">
+<header class="header">
+	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a>
+</header>
+<main class="container-fluid">
+	<div class="row">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 <!-- #bbinclude "header.incl" -->
-<h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div>
+			<h1>
+				Holocaust Encyclopedia
+			</h1>
+			<p class="lead">
+				uncensored and unconstrained
+			</p>
+			<div id="masthead">
+			</div>
 <!-- end bbinclude -->
 			<h2>
 				Ukraine
@@ -29,9 +45,9 @@
 				<li>Victim</li>
 				<li>Propaganda Podium</li>
 			</ol>
-			<h4>
+			<h3>
 				Perpetrator
-			</h4>
+			</h3>
 			<p>
 				The Ukrainian people suffered incredible hardships during the Bolshevist revolution and even more so under the subsequent Stalinist rule, in particular during the Holodomor. Most Ukrainians were probably keenly aware of the predominance of people with a Jewish background among their oppressors.
 			</p>
@@ -41,154 +57,70 @@
 			<p>
 				Many volunteered to guard prison, PoW, labor and concentration camps. Based on numerous witness testimonies, the orthodox narrative has it even that Ukrainian helpers, so-called Trawnikis (derived from the Trawniki training camp), played a crucial role among those who are said to have run the so-called extermination camps.
 			</p>
-			<h4>
+			<h3>
 				Crime Scene
-			</h4>
+			</h3>
 			<p>
 				Not just one, but two <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> &mdash; C and D &mdash; were active in Ukraine. The most infamous crime scene associated with these units is on the outskirts of Ukraine&rsquo;s capital Kiev: <a href="/other-crime-scene/babi-yar/index.html">Babi Yar</a>. The <a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Road Camp</a> near Lviv is also among the better-known places connected with the Holocaust.
 			</p>
-			<h4>
+			<h3>
 				Victim
-			</h4>
+			</h3>
 			<p>
 				The <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>&rsquo;s ranked death-toll list includes several entries for Ukrainian locations:
 			</p>
-			<dl> 
-				<dd> 
-					<table class="alternate ctab" style="width: 43.8986%;" cellspacing="0" cellpadding="2">
-						<thead>
-							<tr>
-								<th style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Location</span>
-								</p>
-								</th>
-								<th style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">Victims</span>
-								</p>
-								</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Kiev</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">33,776</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Kamenets-Podolsky </span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">23,600</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Nikolayev, Kherson</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">22,467</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Rovno</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">15,240</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Dnepropetrovsk </span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">10,350</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Simferopol</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">10,300</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Odessa </span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">10,000</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Lviv</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">8,154</span>
-								</p>
-								</td>
-							</tr>
-							<tr>
-								<td style="width: 28.9885%;"> 
-								<p>
-									<span lang="en-US">Zhitomir</span>
-								</p>
-								</td>
-								<td style="width: 14.7028%;"> 
-								<p>
-									<span lang="en-US">4,843</span>
-								</p>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</dd>
-			</dl>
+			<table class="table">
+				<thead>
+					<tr>
+						<th> Location </th>
+						<th>Victims </th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Kiev </td>
+						<td>33,776 </td>
+					</tr>
+					<tr>
+						<td>Kamenets-Podolsky </td>
+						<td>23,600 </td>
+					</tr>
+					<tr>
+						<td>Nikolayev, Kherson </td>
+						<td>22,467 </td>
+					</tr>
+					<tr>
+						<td>Rovno </td>
+						<td>15,240 </td>
+					</tr>
+					<tr>
+						<td>Dnepropetrovsk </td>
+						<td>10,350 </td>
+					</tr>
+					<tr>
+						<td>Simferopol </td>
+						<td>10,300 </td>
+					</tr>
+					<tr>
+						<td>Odessa </td>
+						<td>10,000 </td>
+					</tr>
+					<tr>
+						<td>Lviv </td>
+						<td>8,154 </td>
+					</tr>
+					<tr>
+						<td>Zhitomir </td>
+						<td>4,843 </td>
+					</tr>
+				</tbody>
+			</table>
 			<p>
-				Ukraine was completely occupied by Germany, and many parts of it for a long time. This put all of Ukraine&rsquo;s remaining Jews in mortal danger, and many paid with their life for the wrath of the revolution&rsquo;s victims&rsquo; and their foreign masters&rsquo; lust for revenge. (For the complete list, see the section <q>Documented History</q> of the entry on the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>.)
+				Ukraine was completely occupied by Germany, and many parts of it for a long time. This put all of Ukraine&rsquo;s remaining Jews in mortal danger, and many paid with their life for the wrath of the revolution&rsquo;s victims&rsquo; and their foreign masters&rsquo; lust for revenge. (For the complete list, see the section <q>Documented History</q> of the entry on the <i><a href="/instruments/tool/einsatzgruppen/index.html">Einsatzgruppen</a>.</i>)
 			</p>
-			<h4>
+			<h3>
 				Propaganda Podium
-			</h4>
+			</h3>
 			<p>
 				At war&rsquo;s end, Ukraine was turned into a podium for anti-German and anti-Ukrainian propaganda spread by Stalinist <a href="/legal/trial/show-trials/index.html">show trials</a> and mock investigative commissions. The most famous of these show trials was staged in late 1943 in <a href="/legal/trial/kharkov/index.html">Kharkov</a>. The most prominent collection of Soviet forensic investigations into alleged German atrocities is titled <i>Nazi Crimes in the Ukraine</i>. It was published in an English translation right after the hysterical climax of the Jerusalem <a href="/legal/trial/show-trials/index.html">show trial</a> against the exiled Ukrainian <a href="/legal/trial/demjanjuk-john/index.html">John Demjanjuk</a> (<a href="/bibliography/index.html#Denisov">Denisov/Changuli 1987</a>; to grasp its propaganda content, see the section <q>Soviet Propaganda Claims</q> of the entry on <a href="/instruments/einsatzgruppen/aktion-1005/index.html"><i>Aktion</i> 1005</a>).
 			</p>
@@ -217,16 +149,32 @@
 				</div>
 			</nav>
 <!-- #bbinclude "footer.incl" -->
-</article><nav class="navigation col-md-3" id="nav-hhp"></nav><hr><aside class="col-md-3" id="aside"></aside></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-<script src="/_assets/js/loadHtml.js"></script><script>
+		</article>
+		<nav class="navigation col-md-3" id="nav-hhp">
+		</nav>
+		<hr>
+		<aside class="col-md-3" id="aside">
+		</aside>
+	</div>
+</main>
+<footer class="footer" id="footer">
+	<p class="text-center">
+		Copyright &copy; 2022-2024 Academic Research Group
+	</p>
+</footer>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+</script>
+<script src="/_assets/js/loadHtml.js">
+</script>
+<script>
 	loadHtml("#masthead", "/_assets/includes/masthead.htm");
 	loadHtml("#aside", "/_assets/includes/aside.htm");
-	loadHtml("#nav-hhp", "/_assets/includes/nav.htm");</script>
-<script src="/_assets/bootstrap3_player/bootstrap3_player.js" type="360cc5a5ec7adab840b8d2c3-text/javascript"></script>
-
+	loadHtml("#nav-hhp", "/_assets/includes/nav.htm");
+</script>
+<script src="/_assets/bootstrap3_player/bootstrap3_player.js" type="360cc5a5ec7adab840b8d2c3-text/javascript">
+</script>
 <!-- end bbinclude -->
 </body>
 </html>
