add cross links

--- a/search.html
+++ b/search.html
@@ -22,11 +22,8 @@
 <!-- #bbinclude "header.incl" -->
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div>
 <!-- end bbinclude -->
-		<h2>
-			Search the Holocaust Historiography Project
-		</h2>
 		<p>
-			This form will allow you to search everything on the site. You can search the <a href="https://www.historiography-project.org/">Clippings</a> separately using the dedicated search function for that section.
+			This searches everything on these sites. You can search the <a href="https://www.historiography-project.org/">Clippings</a> separately using the dedicated search function for that section.
 		</p>
 		<h2>
 			Bing
@@ -38,7 +35,7 @@
 				<input class="form-control" type="text" name="q" placeholder="Bing site search">
 			</div>
 			<button class="btn btn-default" type="submit" value="Bing Search"><i class="glyphicon glyphicon-search"></i></button>
-			<input type="hidden" name="q1" value="site:www.historiography-project.com">
+			<input type="hidden" name="q1" value="site:encyclopedia.historiography-project.com">
 		</form>
 		<h2>
 			Google
@@ -53,7 +50,7 @@
 <!-- /SiteSearch Google -->
 		<hr>
 		<p>
-			You can also use your browser to search the titles of <a href="/sitemap.php">the files on this website</a>.
+			You can also use your browser to search the titles of <a href="/sitemap.html">the files on this website</a>.
 		</p>
 <!-- #bbinclude "footer.incl" -->
 </article><nav class="navigation col-md-3" id="nav-hhp"></nav><hr><aside class="col-md-3" id="aside"></aside></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
