--- a/concept/demography-jewish/index.html
+++ b/concept/demography-jewish/index.html
@@ -269,7 +269,7 @@
 			<p>
 				In summary, the adjustments listed in the next table need to be made to the orthodox study by Benz and his colleagues.
 			</p>
-			<table class="alternate ctab" cellspacing="0" cellpadding="2">
+			<table class="table">
 				<caption>Corrections Needed for Benz</caption>
 				<tbody>
 					<tr>
@@ -382,7 +382,7 @@
 			</p>
 			<table class="alternate ctab" style="width: 63.1251%; height: 442px;" cellspacing="0" cellpadding="2">
 				<tbody>
-					<tr style="height: 34px;">
+					<tr>
 						<th style="height: 34px; width: 17.5347%;">Europe</th>
 						<th style="height: 34px; width: 21.0036%;">
 						<p>
@@ -395,7 +395,7 @@
 						</p>
 						</th>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/belgium/index.html">Belgium</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -408,7 +408,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/bulgaria/index.html">Bulgaria</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -421,7 +421,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/czechia/index.html">Czecho</a>&#8211;<a href="/location/country/slovakia/index.html">Slovakia</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -434,7 +434,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;">Denmark</td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -447,7 +447,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/france/index.html">France</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -460,7 +460,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/greece/index.html">Greece</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -473,7 +473,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/italy/index.html">Italy</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -486,7 +486,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/luxembourg/index.html">Luxembourg</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -499,7 +499,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/netherlands/index.html">Netherlands</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -512,7 +512,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/norway/index.html">Norway</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -525,7 +525,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/romania/index.html">Romania</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
@@ -538,7 +538,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="height: 34px; width: 17.5347%;"><a href="/location/country/yugoslavia/index.html">Yugoslavia</a></td>
 						<td style="height: 34px; width: 21.0036%;">
 						<p>
