--- a/instruments/camp/extermination-camps/index.html
+++ b/instruments/camp/extermination-camps/index.html
@@ -44,12 +44,12 @@
 			</p>
 			<table class="alternate ctab" style="width: 65.7292%; height: 1072px;" cellspacing="0" cellpadding="2">
 				<tbody>
-					<tr style="height: 34px;">
-						<th style="height: 34px;">Location</th>
+					<tr>
+						<th>Location</th>
 						<th style="width: 19.6464%; height: 34px;">claimed Type</th>
 						<th style="width: 28.5973%; height: 34px;">alleged Murder Weapon(s)</th>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"><a href="/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a></td>
 						<td style="width: 19.6464%; height: 34px;"> 
 						<p>
@@ -62,7 +62,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"><a href="/pure-extermination-camp/belzec/index.html">Belzec</a></td>
 						<td style="width: 19.6464%; height: 34px;"> 
 						<p>
@@ -75,7 +75,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/other-camp/bergen-belsen/index.html" target="_top" rel="noopener">Bergen-Belsen</a>
@@ -92,7 +92,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/buchenwald/index.html" target="_top" rel="noopener">Buchenwald</a>
@@ -109,7 +109,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/pure-extermination-camp/chelmno/index.html" target="_top" rel="noopener">Chełmno</a>
@@ -126,7 +126,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/mixed-purpose-camp/dachau/index.html" target="_top" rel="noopener">Dachau</a>
@@ -143,7 +143,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/flossenburg/index.html" target="_top" rel="noopener">Flossenbürg</a>
@@ -160,7 +160,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"><a href="/phantom-camp/gross-rosen/index.html">Gross-Rosen</a></td>
 						<td style="width: 19.6464%; height: 34px;"> 
 						<p>
@@ -173,7 +173,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/other-camp/gusen/index.html" target="_top" rel="noopener">Gusen</a>
@@ -190,7 +190,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/kosow-podlaski/index.html" target="_top" rel="noopener">Kosów Podlaski</a>
@@ -207,7 +207,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/lviv/index.html" target="_top" rel="noopener">Lviv</a>
@@ -224,7 +224,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/majdanek/index.html" target="_top" rel="noopener">Majdanek</a>
@@ -241,7 +241,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/maly-trostenets/index.html" target="_top" rel="noopener">Maly Trostenets</a>
@@ -258,7 +258,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/mauthausen/index.html" target="_top" rel="noopener">Mauthausen</a>
@@ -275,7 +275,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/mogilev/index.html" target="_top" rel="noopener">Mogilev</a>
@@ -292,7 +292,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/natzweiler/index.html" target="_top" rel="noopener">Natzweiler</a>
@@ -309,7 +309,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/neuengamme/index.html" target="_top" rel="noopener">Neuengamme</a>
@@ -326,7 +326,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/phantom-camp/nordhausen/index.html" target="_top" rel="noopener">Nordhausen</a>
@@ -343,7 +343,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/pinsk/index.html" target="_top" rel="noopener">Pinsk</a>
@@ -360,7 +360,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/mixed-purpose-camp/ravensbruck/index.html" target="_top" rel="noopener">Ravensbrück</a>
@@ -377,7 +377,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/mixed-purpose-camp/sachsenhausen/index.html" target="_top" rel="noopener">Sachsenhausen</a>
@@ -394,7 +394,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/location/camps/semlin/index.html" target="_top" rel="noopener">Semlin</a>
@@ -411,7 +411,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/location/camps/sobibor/index.html" target="_top" rel="noopener">Sobibór</a>
@@ -428,7 +428,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/location/camps/stutthof/index.html" target="_top" rel="noopener">Stutthof</a>
@@ -445,7 +445,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/absurdities/trawniki/index.html" target="_top" rel="noopener">Trawniki</a>
@@ -462,7 +462,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/pure-extermination-camp/treblinka/index.html" target="_top" rel="noopener">Treblinka</a>
@@ -479,7 +479,7 @@
 						</p>
 						</td>
 					</tr>
-					<tr style="height: 34px;">
+					<tr>
 						<td style="width: 14.416%; height: 34px;"> 
 						<p>
 							<a href="/phantom-camp/wolzek/index.html" target="_top" rel="noopener">Wolzek</a>
