--- a/technology/lumberjacks/index.html
+++ b/technology/lumberjacks/index.html
@@ -56,33 +56,33 @@
 			<table class="alternate ctab" style="width: 100%; height: 1135px;" cellspacing="0" cellpadding="2">
 				<tbody>
 					<tr>
-						<th style="height: 34px;">Witness/Location</th>
-						<th style="height: 34px;"> 
+						<th>Witness/Location</th>
+						<th> 
 						<p>
 							Bodies
 						</p>
 						</th>
-						<th style="height: 34px;"> 
+						<th> 
 						<p>
 							Wood Needed [t]
 						</p>
 						</th>
-						<th style="height: 34px;"> 
+						<th> 
 						<p>
 							Hectares*
 						</p>
 						</th>
-						<th style="height: 34px;"> 
+						<th> 
 						<p>
 							Football Fields*
 						</p>
 						</th>
-						<th style="height: 34px;"> 
+						<th> 
 						<p>
 							Days
 						</p>
 						</th>
-						<th style="height: 34px;"> 
+						<th> 
 						<p>
 							Lumberjacks†
 						</p>
