--- a/instruments/camp/pure-extermination-camp/chelmno/index.html
+++ b/instruments/camp/pure-extermination-camp/chelmno/index.html
@@ -95,52 +95,52 @@
 			<table class="ctab alternate" style="width: 100%; height: 204px;" cellspacing="0" cellpadding="2">
 				<caption>Victim numbers claimed for Chełmno</caption>
 				<tbody>
-					<tr style="height: 34px;">
-						<td style="height: 34px;"> 
+					<tr>
+						<td> 
 						<p>
 							1,300,000
 						</p>
 						</td>
-						<td style="height: 34px;">Polish postwar commission, May 1945</td>
+						<td>Polish postwar commission, May 1945</td>
 					</tr>
-					<tr style="height: 34px;">
-						<td style="height: 34px;"> 
+					<tr>
+						<td> 
 						<p>
 							400,000
 						</p>
 						</td>
-						<td style="height: 34px;">Claude Lanzmann, <i>Shoah,</i> 1985</td>
+						<td>Claude Lanzmann, <i>Shoah,</i> 1985</td>
 					</tr>
 					<tr>
-						<td style="text-align: right;">350,000</td>
+						<td>350,000</td>
 						<td>Laqueur, Baumel-Schwartz 2001, p. 231</td>
 					</tr>
-					<tr style="height: 34px;">
-						<td style="height: 34px;"> 
+					<tr>
+						<td> 
 						<p>
 							340,000
 						</p>
 						</td>
-						<td style="height: 34px;">Polish judge <a href="/historical-person/legal-professional/bednarz-wladyslaw/index.html">Władysław Bednarz</a>, 1946</td>
+						<td>Polish judge <a href="/historical-person/legal-professional/bednarz-wladyslaw/index.html">Władysław Bednarz</a>, 1946</td>
 					</tr>
-					<tr style="height: 34px;">
-						<td style="height: 34px;"> 
+					<tr>
+						<td> 
 						<p>
 							310,000
 						</p>
 						</td>
-						<td style="height: 34px;">Polish historical commission, 1979</td>
+						<td>Polish historical commission, 1979</td>
 					</tr>
-					<tr style="height: 34px;">
-						<td style="height: 34px;"> 
+					<tr>
+						<td> 
 						<p>
 							≥152,000
 						</p>
 						</td>
-						<td style="height: 34px;">Jury Court Bonn, 1963/65</td>
+						<td>Jury Court Bonn, 1963/65</td>
 					</tr>
-					<tr style="height: 34px;">
-						<td class="tf" style="height: 34px;" colspan="2">For sources, see <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 107-111.</td>
+					<tr>
+						<td class="tf" colspan="2">For sources, see <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 107-111.</td>
 					</tr>
 				</tbody>
 			</table>
