--- a/instruments/camp/mixed-purpose-camp/auschwitz/index.html
+++ b/instruments/camp/mixed-purpose-camp/auschwitz/index.html
@@ -92,10 +92,10 @@
 				They lied in the past, they are compelled to lie now, and they will keep lying in the future &mdash; until all censorship laws have been rescinded, special statuses for minority groups have been revoked, and freedom and fair play finally reign.
 			</p>
 			<table class="table">
-				<caption>Number of Victims Claimed for Auschwitz</caption>
+				<caption>Number of victims claimed for Auschwitz</caption>
 				<thead>
 					<tr>
-						<th>No of Victims</th>
+						<th>No. of victims</th>
 						<th colspan="2">Source (for exact references, see <a href="/bibliography/index.html#Faurisson2003">Faurisson 2003</a>)</th>
 					</tr>
 				</thead>
