--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -17,6 +17,16 @@
 			<h2>
 				List of Entries
 			</h2>
+<!-- #bbinclude "he-search.incl" -->
+<form action="https://www.google.com/search" method="get" class="search-form">
+<!-- Hidden input to restrict search to specific domain -->
+	<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
+	<div class="search-wrapper">
+		<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
+		<button type="submit">Search</button>
+	</div>
+</form>
+<!-- end bbinclude -->
 			<ol>
 				<li><a href="/absurdities/absurd-claims/index.html">absurd claims</a></li>
 				<li><a href="/witness/perpetrator/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
