--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -18,14 +18,16 @@
 			<h2>
 				Site files
 			</h2>
-			<form action="https://www.google.com/search" method="get" class="search-form">
+<!-- #bbinclude "he-search.incl" -->
+<form action="https://www.google.com/search" method="get" class="search-form">
 <!-- Hidden input to restrict search to specific domain -->
-				<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
-				<div class="search-wrapper">
-					<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
-					<button type="submit">Search</button>
-				</div>
-			</form>
+	<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
+	<div class="search-wrapper">
+		<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
+		<button type="submit">Search</button>
+	</div>
+</form>
+<!-- end bbinclude -->
 			<ul>
 				<li><a href="/tag/a/index.html">A</a></li>
 				<li><a href="/about-us/index.html">About Us</a></li>
