--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiographyproject.com/list-of-entries/index.html" rel="canonical">
 <!-- end bbinclude -->
 	<title>List of Entries | Holocaust Encyclopedia</title>
+<link rel="stylesheet" href="/_assets/css/search-min.css" media="screen">
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
