--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 			box-sizing: content-box;
 		}
 </style>
-</head>
+	</head>
 <body id="top">
 <!-- #bbinclude "page-header-small.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9">
@@ -22,24 +22,37 @@
 <!-- #bbinclude "header.incl" -->
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><nav id="breadcrumbs"></nav>
 <!-- end bbinclude -->
-		<p>
-			This searches everything on these sites. You can search the <a href="https://www.historiography-project.org/">Clippings</a> separately using the dedicated search function for that section.
-		</p>
-		<h2>
-			Google
-		</h2>
-		<div class="reset-box-sizing">
+			<p>
+				These search everything on these sites. You can search the <a href="https://www.historiography-project.org/">Clippings</a> separately using the dedicated search function for that section.
+			</p>
+			<h2>
+				Search the Holocaust Encyclopedia
+			</h2>
+<!-- #bbinclude "he-search.incl" -->
+<form action="https://www.google.com/search" method="get" class="search-form">
+<!-- Hidden input to restrict search to specific domain -->
+	<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
+	<div class="search-wrapper">
+		<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
+		<button type="submit">Search</button>
+	</div>
+</form>
+<!-- end bbinclude -->
+			<h2>
+				Search the entire Historiography Project
+			</h2>
+			<div class="reset-box-sizing">
 <!-- SiteSearch Google -->
-		</div>
-		<script async src="https://cse.google.com/cse.js?cx=016318631730602016031:y_bdobvehsy">
+			</div>
+			<script async src="https://cse.google.com/cse.js?cx=016318631730602016031:y_bdobvehsy">
 </script>
-		<div class="gcse-search">
-		</div>
+			<div class="gcse-search">
+			</div>
 <!-- /SiteSearch Google -->
-		<hr>
-		<p>
-			You can also use your browser to search the titles of <a href="/sitemap/index.html">the files on this website</a>.
-		</p>
+			<hr>
+			<p>
+				You can also use your browser to search the titles of <a href="/sitemap/index.html">the files on this website</a>.
+			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
